// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1 1`] = `
<div
  data-testid="todo-1"
>
  <h1>
    wash dishes
  </h1>
</div>
`;

exports[`matches snapshot 2 1`] = `
<div
  data-testid="todo-2"
>
  <strike>
    <h1>
      wash car
    </h1>
  </strike>
</div>
`;
